--- a/src/css/meshki.css
+++ b/src/css/meshki.css
@@ -28,7 +28,8 @@ body {
   line-height: 1.6;
   font-weight: 400;
   font-family: "Raleway", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  color: #222; }
+  background-color: #222;
+  color: #E0E0E0; }
 
 
 /* Links
