Added .centerize and .text-center to center stuff

--- a/src/css/typography.css
+++ b/src/css/typography.css
@@ -31,3 +31,6 @@ h6 { font-size: 1.5rem; line-height: 1.6;  letter-spacing: 0; }
 
 p {
   margin-top: 0; }
+.text-center {
+  text-align: center;
+}
