--- a/src/css/grid.css
+++ b/src/css/grid.css
@@ -8,6 +8,10 @@
 
 /* Grid
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
+.centerize {
+  margin-left: auto;
+  margin-right: auto;
+}
 .container {
   position: relative;
   width: 100%;
