--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -26,7 +26,7 @@ ul.nav li a.logo {
 }
 
 ul.nav li a.logo:hover {
-  background-color: #E6E6E6;
+  background-color: #EAEAEA;
   color: black;
 }
 
