Sidenav now matches Meshki's default media queries

--- a/src/css/sidenav.css
+++ b/src/css/sidenav.css
@@ -42,7 +42,7 @@
 }
 
 /* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
-@media screen and (max-height: 450px) {
+@media (max-height: 544px) {
     .sidenav {padding-top: 15px;}
     .sidenav a {font-size: 18px;}
 }
