--- a/src/css/grid.css
+++ b/src/css/grid.css
@@ -12,6 +12,18 @@
   margin-left: auto;
   margin-right: auto;
 }
+.row {
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 20px;
+}
+
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
 .container {
   position: relative;
   width: 100%;
