Changed anchor tag colors

--- a/src/css/meshki.css
+++ b/src/css/meshki.css
@@ -40,9 +40,9 @@ body {
 /* Links
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 a {
-  color: #1EAEDB; }
+  color: #0091FF; }
 a:hover {
-  color: #0FA0CE; }
+  color: #59B8FF; }
 
 
 /* Spacing
