--- a/src/css/button.css
+++ b/src/css/button.css
@@ -9,11 +9,15 @@
 /* Buttons
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 /* css for the shiny buttons */
-button:focus {
+a.button:focus,
+button:focus,
+input[type="submit"]:focus,
+input[type="reset"]:focus,
+input[type="button"]:focus {
   outline: 0;
 }
 
-.button,
+a.button,
 button,
 input[type="submit"],
 input[type="reset"],
@@ -34,7 +38,7 @@ input[type="button"] {
   border: 2px solid #c7c7c7;
 }
 
-.button:hover,
+a.button:hover,
 button:hover,
 input[type="submit"]:hover,
 input[type="reset"]:hover,
@@ -43,7 +47,7 @@ input[type="button"]:hover {
   color: #000;
 }
 
-.button.default,
+a.button.default,
 button.default,
 input[type="submit"].default,
 input[type="reset"].default,
@@ -52,7 +56,7 @@ input[type="button"].default {
   border: 2px #55acee solid;
 }
 
-.button.default:hover,
+a.button.default:hover,
 button.default:hover,
 input[type="submit"].default:hover,
 input[type="reset"].default:hover,
@@ -61,7 +65,7 @@ input[type="button"].default:hover {
   color: #fff
 }
 
-.button.success,
+a.button.success,
 button.success,
 input[type="submit"].success,
 input[type="reset"].success,
@@ -70,7 +74,7 @@ input[type="button"].success {
   border: 2px #2ecc71 solid;
 }
 
-.button.success:hover,
+a.button.success:hover,
 button.success:hover,
 input[type="submit"].success:hover,
 input[type="reset"].success:hover,
@@ -79,7 +83,7 @@ input[type="button"].success:hover {
   background-color: #2ecc71;
 }
 
-.button.danger,
+a.button.danger,
 button.danger,
 input[type="submit"].danger,
 input[type="reset"].danger,
@@ -88,7 +92,7 @@ input[type="button"].danger {
   border: 2px #e74c3c solid;
 }
 
-.button.danger:hover,
+a.button.danger:hover,
 button.danger:hover,
 input[type="submit"].danger:hover,
 input[type="reset"].danger:hover,
@@ -97,7 +101,7 @@ input[type="button"].danger:hover {
   background-color: #e74c3c;
 }
 
-.button.warning,
+a.button.warning,
 button.warning,
 input[type="submit"].warning,
 input[type="reset"].warning,
@@ -106,7 +110,7 @@ input[type="button"].warning {
   border: 2px #e67e22 solid;
 }
 
-.button.warning:hover,
+a.button.warning:hover,
 button.warning:hover,
 input[type="submit"].warning:hover,
 input[type="reset"].warning:hover,
