Better spacing for elements

--- a/src/css/meshki.css
+++ b/src/css/meshki.css
@@ -48,14 +48,16 @@ a:hover {
 /* Spacing
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 button,
-.button {
+a.button,
+input[type="submit"],
+input[type="reset"],
+input[type="button"] {
   margin-bottom: 1rem; }
 input,
 textarea,
 select,
 fieldset {
   margin-bottom: 1.5rem; }
-pre,
 blockquote,
 dl,
 figure,
