Form elements are now dimmed when they're disabled.

--- a/src/css/form.css
+++ b/src/css/form.css
@@ -27,6 +27,19 @@ select {
   box-sizing: border-box;
   transition: border .3s, background-color .3s, box-shadow .3s;
 }
+
+input[type="email"]:disabled,
+input[type="number"]:disabled,
+input[type="search"]:disabled,
+input[type="text"]:disabled,
+input[type="tel"]:disabled,
+input[type="url"]:disabled,
+input[type="password"]:disabled,
+textarea:disabled,
+select:disabled {
+  background-color: #B1B1B1;
+}
+
 /* Removes awkward default styles on some inputs for iOS */
 input[type="email"],
 input[type="number"],
