--- a/src/css/form.css
+++ b/src/css/form.css
@@ -52,9 +52,10 @@ textarea {
   -webkit-appearance: none;
      -moz-appearance: none;
           appearance: none;
+}
+.expand {
   width: 100%;
 }
-
 textarea {
   min-height: 65px;
   padding-top: 6px;
