More pleasant blue color for <a>

--- a/src/css/meshki.css
+++ b/src/css/meshki.css
@@ -40,7 +40,7 @@ body {
 /* Links
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 a {
-  color: #0091FF; }
+  color: rgb(60, 216, 255); }
 a:hover {
   color: #59B8FF; }
 
