--- a/src/css/form.css
+++ b/src/css/form.css
@@ -39,6 +39,7 @@ textarea:disabled,
 select:disabled {
   background-color: #B1B1B1;
   color: #303030;
+  border-color: #B1B1B1;
 }
 
 /* Removes awkward default styles on some inputs for iOS */
