--- a/src/css/code.css
+++ b/src/css/code.css
@@ -1,7 +1,7 @@
 /*
-* Meshki V1.0.0
-* Copyright 2016, Qolak Team
-* www.qolak.com/meshki
+* Meshki v0.3.0
+* Copyright 2016, Mohammad reza Hajianpour
+* http://borderliner.ir/meshki
 * Free to use under the MIT license.
 * https://opensource.org/licenses/MIT
 */
