--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -1,3 +1,11 @@
+/*
+* Meshki v0.3.0
+* Copyright 2016, Mohammad reza Hajianpour
+* http://borderliner.ir/meshki
+* Free to use under the MIT license.
+* https://opensource.org/licenses/MIT
+*/
+
 ul.nav {
   list-style-type: none;
   padding: 0;
