Commentized all files

--- a/src/css/sidenav.css
+++ b/src/css/sidenav.css
@@ -1,3 +1,11 @@
+/*
+* Meshki v0.3.1
+* Copyright 2016, Mohammad reza Hajianpour
+* http://borderliner.ir/meshki
+* Free to use under the MIT license.
+* https://opensource.org/licenses/MIT
+*/
+
 /* The side navigation menu */
 .sidenav {
     height: 100%; /* 100% Full-height */
