--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -1,3 +1,11 @@
+/*
+* Meshki v0.3.1
+* Copyright 2016, Mohammad reza Hajianpour
+* http://borderliner.ir/meshki
+* Free to use under the MIT license.
+* https://opensource.org/licenses/MIT
+*/
+
 footer, .footer {
   max-width: 100%;
   margin: 25px 0px 0px 0px;
