float-right and float-left are set to be important!

--- a/src/css/utility.css
+++ b/src/css/utility.css
@@ -20,11 +20,11 @@
 
 /* Float either direction */
 .float-left {
-  float: left;
+  float: left !important;
 }
 
 .float-right {
-  float: right;
+  float: right !important;
 }
 
 /* Center an element */
