--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -48,3 +48,10 @@ ul.nav li a.logo:hover {
 ul.nav li a:hover {
   background-color: #111;
 }
+
+ul.nav li.nav-right {
+  float: right !important;
+  position: absolute;
+  top: 7px;
+  right: 16px;
+}
