--- a/src/css/meshki.css
+++ b/src/css/meshki.css
@@ -23,7 +23,7 @@ html is set to 62.5% so that all the REM measurements throughout Skeleton
 are based on 10px sizing. So basically 1.5rem = 15px :) */
 @font-face {
   font-family: 'Raleway';
-  src: url('fonts/Raleway-Regular.ttf');;
+  src: url('fonts/Raleway-Regular.ttf');
 }
 
 html {
