--- a/src/css/button.css
+++ b/src/css/button.css
@@ -8,7 +8,7 @@
 
 /* Buttons
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
-/* css for the shiny buttons */
+/* Removed focus outlines, especially in Firefox */
 a.button:focus,
 button:focus,
 input[type="submit"]:focus,
@@ -17,6 +17,7 @@ input[type="button"]:focus {
   outline: 0;
 }
 
+/* Simple button, with no style */
 a.button,
 button,
 input[type="submit"],
@@ -38,6 +39,7 @@ input[type="button"] {
   border: 2px solid #E1E1E1;
 }
 
+/* Simple button's hover */
 a.button:hover,
 button:hover,
 input[type="submit"]:hover,
@@ -47,6 +49,7 @@ input[type="button"]:hover {
   color: #000;
 }
 
+/* Default blue button */
 a.button.default,
 button.default,
 input[type="submit"].default,
@@ -56,6 +59,7 @@ input[type="button"].default {
   border: 2px #55acee solid;
 }
 
+/* Default blue button's hover */
 a.button.default:hover,
 button.default:hover,
 input[type="submit"].default:hover,
@@ -65,6 +69,7 @@ input[type="button"].default:hover {
   color: #fff
 }
 
+/* Success green button */
 a.button.success,
 button.success,
 input[type="submit"].success,
@@ -74,6 +79,7 @@ input[type="button"].success {
   border: 2px #2ecc71 solid;
 }
 
+/* Success green button's hover */
 a.button.success:hover,
 button.success:hover,
 input[type="submit"].success:hover,
@@ -83,6 +89,7 @@ input[type="button"].success:hover {
   background-color: #2ecc71;
 }
 
+/* Danger red button */
 a.button.danger,
 button.danger,
 input[type="submit"].danger,
@@ -92,6 +99,7 @@ input[type="button"].danger {
   border: 2px #e74c3c solid;
 }
 
+/* Danger red button's hover */
 a.button.danger:hover,
 button.danger:hover,
 input[type="submit"].danger:hover,
@@ -101,6 +109,7 @@ input[type="button"].danger:hover {
   background-color: #e74c3c;
 }
 
+/* Warning orange button */
 a.button.warning,
 button.warning,
 input[type="submit"].warning,
@@ -110,6 +119,7 @@ input[type="button"].warning {
   border: 2px #e67e22 solid;
 }
 
+/* Warning orange button's hover */
 a.button.warning:hover,
 button.warning:hover,
 input[type="submit"].warning:hover,
