--- a/src/css/form.css
+++ b/src/css/form.css
@@ -160,5 +160,5 @@ input[type="radio"]:checked + label.radio:before {
 
 /* Remove outlines of checkboxes and radio buttons, especially for Firefox */
 input[type="checkbox"]:focus + label.checkbox, input[type="radio"]:focus + label.radio {
-  outline: none;
+  outline: none !important;
 }
