--- a/src/css/form.css
+++ b/src/css/form.css
@@ -20,10 +20,10 @@ input[type="password"],
 textarea,
 select {
   height: 38px;
-  padding: 6px 10px; /* The 6px vertically centers text on FF, ignored by Webkit */
   background-color: #E0E0E0;
   border: 1px solid #D1D1D1;
   border-radius: 4px;
+  padding: 6px 10px; /* The 6px vertically centers text on FF, ignored by Webkit */
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1) inset;
   box-sizing: border-box;
   transition: border .3s, background-color .3s, box-shadow .3s;
@@ -60,8 +60,7 @@ textarea {
 
 textarea {
   min-height: 65px;
-  padding-top: 6px;
-  padding-bottom: 6px;
+  padding: 6px 0px 6px 0px;
 }
 
 /* Blue light animation when the form elements get focus */
@@ -74,24 +73,24 @@ input[type="url"]:focus,
 input[type="password"]:focus,
 textarea:focus,
 select:focus {
-  border: 1px solid #33BBF0;
   background-color: #FFF;
+  border: 1px solid #33BBF0;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1) inset, 0 0 8px rgba(41, 92, 161, 0.6);
-  outline: 0;
+  outline: 0 !important;
 }
 
 /* Label and Legend normalization */
 label,
 legend {
+  font-weight: 600;
   display: block;
   margin-bottom: .5rem;
-  font-weight: 600;
 }
 
 /* Fieldset normalization */
 fieldset {
-  padding: 0;
   border-width: 0;
+  padding: 0;
 }
 
 /* Checkbox and Radio normalization */
@@ -102,9 +101,9 @@ input[type="radio"] {
 
 /* FIXME: Examine how this works */
 label > .label-body {
+  font-weight: normal;
   display: inline-block;
   margin-left: .5rem;
-  font-weight: normal;
 }
 
 /* FIXME: Examine what this does actually */
@@ -116,8 +115,8 @@ input.round, textarea.round, button.round {
 
 /* Make the actual boxes invisible */
 input[type="checkbox"], input[type="radio"] {
+    position: absolute;
     opacity: 0;
-    position: absolute;   
 }
 
 /* Checkbox and radio normalization */
@@ -135,15 +134,15 @@ label.checkbox, label.radio {
 /* General attributes for checkboxes and radio buttons */
 input[type="checkbox"] + label.checkbox:before, input[type="radio"] + label.radio:before {
     content: '';
+    display: inline-block;
+    width: 10px;
+    height: 10px;
     background-color: #E1E1E1;
     border: 2px solid #E1E1E1;
     border-radius: 5px;
-    display: inline-block;
-    vertical-align: middle;
-    width: 10px;
-    height: 10px;
     padding: 2px;
     margin-right: 10px;
+    vertical-align: middle;
     text-align: center;
     transition: background-color .3s, box-shadow .3s;
 }
