Commentized list.css

--- a/src/css/list.css
+++ b/src/css/list.css
@@ -8,16 +8,23 @@
 
 /* Lists
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
+
+/* Unordered Lists have empty circle style */
 ul {
   list-style: circle inside; }
+
+/* Ordered Lists have numerical style */
 ol {
   list-style: decimal inside; }
 
+/* Change the style of nested lists */
 ul ul,
 ul ol,
 ol ol,
 ol ul {
   margin: 1.5rem 0 1.5rem 3rem;
   font-size: 90%; }
+
+/* Lists have bottom margin */
 li {
   margin-bottom: 1rem; }
