--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -63,7 +63,7 @@ ul.nav li > a:hover {
 
 /* Send the elements to the right side with nav-right */
 ul.nav li.nav-right {
-  position: absolute;
+  position: inherit;
   top: 7px;
   right: 16px;
   float: right !important;
