Commentized the utility.css file

--- a/src/css/utility.css
+++ b/src/css/utility.css
@@ -6,6 +6,9 @@
 * https://opensource.org/licenses/MIT
 */
 
+/* Utility
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+
 /* Make element full width */
 .expand {
   width: 100%;
@@ -38,24 +41,28 @@
   text-align: center;
 }
 
+/* Hides the element on mobiles and phablets */
 @media (max-width: 544px) {
   .hide-on-mobile {
     display: none !important;
   }
 }
 
+/* Hides the element on tablets and smaller */
 @media (max-width: 768px) {
   .hide-on-tablet {
     display: none !important;
   }
 }
 
+/* Hides the element on desktops */
 @media (min-width: 768px) {
   .hide-on-desktop {
     display: none !important;
   }
 }
 
+/* Hides the element on non-mobile and non-phablets */
 @media (min-width: 544px) {
   .hide-on-non-mobile {
     display: none !important;
