Updated info for the latest release. Getting ready for v0.4.2

--- a/src/css/code.css
+++ b/src/css/code.css
@@ -1,13 +1,14 @@
 /*
-* Meshki v0.4.1
+* Meshki v0.4.2
 * Copyright 2016, Mohammad reza Hajianpour
-* http://borderliner.ir/meshki
+* http://meshki.borderliner.ir/
 * Free to use under the MIT license.
 * https://opensource.org/licenses/MIT
 */
 
 /* Code
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
+
 /* Single code, default style */
 code {
   font-size: 90%;
