--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -1,10 +1,13 @@
 /*
-* Meshki v0.4.1
+* Meshki v0.4.2
 * Copyright 2016, Mohammad reza Hajianpour
-* http://borderliner.ir/meshki
+* http://meshki.borderliner.ir/
 * Free to use under the MIT license.
 * https://opensource.org/licenses/MIT
 */
+
+/* Footer
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
 
 /* The footer tag, or a div with footer (Useful for IE) */
 footer, .footer {
