--- a/src/css/button.css
+++ b/src/css/button.css
@@ -1,13 +1,14 @@
 /*
-* Meshki v0.4.1
+* Meshki v0.4.2
 * Copyright 2016, Mohammad reza Hajianpour
-* http://borderliner.ir/meshki
+* http://meshki.borderliner.ir/
 * Free to use under the MIT license.
 * https://opensource.org/licenses/MIT
 */
 
 /* Buttons
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
+
 /* Removed focus outlines, especially in Firefox */
 a.button:focus,
 button:focus,
