--- a/src/css/button.css
+++ b/src/css/button.css
@@ -28,7 +28,7 @@ input[type="button"] {
   margin: 5px !important;
   border-radius: 5px;
   text-decoration: none;
-  padding: 5px 10px 5px 10px;
+  padding: 8px 10px;
   transition: .3s;
   font-size: 1.6rem;
   -webkit-transition: .3s;
@@ -38,6 +38,7 @@ input[type="button"] {
   background-color: transparent;
   color: #E1E1E1;
   border: 2px solid #E1E1E1;
+  line-height: normal !important; /* Fix Midori bug */
 }
 
 /* Simple button's hover */
