--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -1,6 +1,6 @@
 /*
 * Meshki v0.4.2
-* Copyright 2016, Mohammad reza Hajianpour
+* Copyright 2016, Mohammad reza Hajianpour <me@borderliner.ir>
 * http://meshki.borderliner.ir/
 * Free to use under the MIT license.
 * https://opensource.org/licenses/MIT
