--- a/src/css/form.css
+++ b/src/css/form.css
@@ -60,7 +60,7 @@ textarea {
 
 textarea {
   min-height: 65px;
-  padding: 6px 0px 6px 0px;
+  padding: 6px 10px;
 }
 
 /* Blue light animation when the form elements get focus */
