Change cursor icon from default to pointer for buttons

--- a/src/css/button.css
+++ b/src/css/button.css
@@ -24,7 +24,7 @@ button,
 input[type="submit"],
 input[type="reset"],
 input[type="button"] {
-  cursor: default;
+  cursor: pointer;
   margin: 5px !important;
   border-radius: 5px;
   text-decoration: none;
